Homeworks/2D_third/output.txt
In file included from main.cpp:8:
window.h:106:8: warning: ‘double f_0(double, double)’ declared ‘static’ but never defined [-Wunused-function]
  106 | double f_0(double /* x */, double /* y */);
      |        ^~~
window.h:108:8: warning: ‘double f_1(double, double)’ declared ‘static’ but never defined [-Wunused-function]
  108 | double f_1(double x, double /* y */);
      |        ^~~
window.h:110:8: warning: ‘double f_2(double, double)’ declared ‘static’ but never defined [-Wunused-function]
  110 | double f_2(double /* x */, double y);
      |        ^~~
window.h:112:8: warning: ‘double f_3(double, double)’ declared ‘static’ but never defined [-Wunused-function]
  112 | double f_3(double x, double y);
      |        ^~~
window.h:114:8: warning: ‘double f_4(double, double)’ declared ‘static’ but never defined [-Wunused-function]
  114 | double f_4(double x, double y);
      |        ^~~
window.h:116:8: warning: ‘double f_5(double, double)’ declared ‘static’ but never defined [-Wunused-function]
  116 | double f_5(double x, double y);
      |        ^~~
window.h:118:8: warning: ‘double f_6(double, double)’ declared ‘static’ but never defined [-Wunused-function]
  118 | double f_6(double x, double y);
      |        ^~~
window.h:120:8: warning: ‘double f_7(double, double)’ declared ‘static’ but never defined [-Wunused-function]
  120 | double f_7(double x, double y);
      |        ^~~
functions.cpp: In function ‘void mult_sub_vector(int, double*, double*, double, int, int)’:
functions.cpp:87:9: error: ‘ReduceSum’ was not declared in this scope; did you mean ‘ReduceSumDet’?
   87 |         ReduceSum(p);
      |         ^~~~~~~~~
      |         ReduceSumDet
functions.cpp: In function ‘void apply_preconditioner_msr_matrix(int, double*, int*, double*, double*, int, int)’:
functions.cpp:98:9: error: ‘ReduceSum’ was not declared in this scope; did you mean ‘ReduceSumDet’?
   98 |         ReduceSum(p);
      |         ^~~~~~~~~
      |         ReduceSumDet
functions.cpp: In function ‘void multiply_msr_matrix_vector(int, double*, int*, double*, double*, int, int)’:
functions.cpp:118:9: error: ‘ReduceSum’ was not declared in this scope; did you mean ‘ReduceSumDet’?
  118 |         ReduceSum(p);
      |         ^~~~~~~~~
      |         ReduceSumDet
functions.cpp: In function ‘void fill_A(int, int, double, double, int*, double*, int, int)’:
functions.cpp:285:9: error: ‘ReduceSum’ was not declared in this scope; did you mean ‘ReduceSumDet’?
  285 |         ReduceSum(p);
      |         ^~~~~~~~~
      |         ReduceSumDet
functions.cpp: In function ‘void fill_B(int, int, double, double, double, double, double*, double (*)(double, double), int, int, int, double)’:
functions.cpp:376:9: error: ‘ReduceSum’ was not declared in this scope; did you mean ‘ReduceSumDet’?
  376 |         ReduceSum(p);
      |         ^~~~~~~~~
      |         ReduceSumDet
functions.cpp: In function ‘void* thread_func(void*)’:
functions.cpp:540:13: error: ‘ReduceSum’ was not declared in this scope; did you mean ‘ReduceSumDet’?
  540 |             ReduceSum(p);
      |             ^~~~~~~~~
      |             ReduceSumDet
make: *** [Makefile:399: functions.o] Error 1
